[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/GUI/Pause controler.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/theme.tres" type="Theme" id=2]
[ext_resource path="res://prefabs/GUI/Background.tscn" type="PackedScene" id=3]

[node name="Pause controler" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Pause controler" type="HBoxContainer" parent="CenterContainer"]
margin_left = 387.0
margin_top = 194.0
margin_right = 637.0
margin_bottom = 406.0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause controler" type="VBoxContainer" parent="CenterContainer/Pause controler"]
pause_mode = 2
margin_right = 250.0
margin_bottom = 212.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Pause controler/Pause controler"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )

[node name="Continue" type="Button" parent="CenterContainer/Pause controler/Pause controler/MarginContainer"]
margin_right = 250.0
margin_bottom = 50.0
focus_mode = 0
custom_colors/font_color = Color( 0.592157, 0.831373, 0.592157, 1 )
text = "Continue"

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/Pause controler/Pause controler"]
margin_top = 54.0
margin_right = 250.0
margin_bottom = 104.0
rect_min_size = Vector2( 250, 50 )

[node name="Settings" type="Button" parent="CenterContainer/Pause controler/Pause controler/MarginContainer3"]
margin_right = 250.0
margin_bottom = 50.0
focus_mode = 0
custom_colors/font_color = Color( 0.67451, 0.854902, 1, 1 )
text = "Settings"

[node name="MarginContainer4" type="MarginContainer" parent="CenterContainer/Pause controler/Pause controler"]
margin_top = 108.0
margin_right = 250.0
margin_bottom = 158.0
rect_min_size = Vector2( 250, 50 )

[node name="Main menu" type="Button" parent="CenterContainer/Pause controler/Pause controler/MarginContainer4"]
margin_right = 250.0
margin_bottom = 50.0
custom_colors/font_color = Color( 1, 0.647059, 0.717647, 1 )
text = "Main menu"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/Pause controler/Pause controler"]
margin_top = 162.0
margin_right = 250.0
margin_bottom = 212.0
rect_min_size = Vector2( 250, 50 )

[node name="Exit" type="Button" parent="CenterContainer/Pause controler/Pause controler/MarginContainer2"]
margin_right = 250.0
margin_bottom = 50.0
focus_mode = 0
custom_colors/font_color = Color( 1, 0.478431, 0.478431, 1 )
text = "Exit"

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="CenterContainer/Pause controler/Pause controler/MarginContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/Pause controler/Pause controler/MarginContainer3/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="CenterContainer/Pause controler/Pause controler/MarginContainer4/Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/Pause controler/Pause controler/MarginContainer2/Exit" to="." method="_on_Exit_pressed"]
